# solana_program

./: .gitignore  Cargo.toml  README.md  explain-encryption.md  explain-progress.md  reset.sh  sc-how-to-use.md
client/: package-lock.json  package.json
client/src/: commands.ts  data.ts  grasscrete.ts  main.ts  util.ts
program/: Cargo.toml  Makefile  upload.sh
program/grasscrete/: Cargo.toml
program/grasscrete/src/: lib.rs  main.rs
program/src/: lib.rs
src/: lib.rs
